# lib/api-spec/openapi.yaml
@@ -833,16 +833,12 @@ components:
           type: integer
         orderIndex:
           type: integer
-        createdAt:
-          type: string
-          format: date-time
       required:
         - id
         - chapterId
         - htmlContent
         - minReadTime
         - orderIndex
-        - createdAt
 
     CreateContentBody:
       type: object
@@ -879,9 +875,9 @@ components:
         title:
           type: string
         chapterId:
-          type: integer
+          type: ["integer", "null"]
         chapterTitle:
-          type: string
+          type: ["string", "null"]
         type:
           type: string
           enum: [CHAPTER, MOCK, NATIONAL]
@@ -899,7 +895,6 @@ components:
       required:
         - id
         - title
-        - chapterId
         - type
         - totalQuestions
         - createdAt
@@ -910,7 +905,7 @@ components:
         title:
           type: string
         chapterId:
-          type: integer
+          type: ["integer", "null"]
         type:
           type: string
           enum: [CHAPTER, MOCK, NATIONAL]
@@ -922,7 +917,6 @@ components:
           format: date-time
       required:
         - title
-        - chapterId
         - type
 
     QuizWithDetails:
@@ -1073,7 +1067,7 @@ components:
         quizId:
           type: integer
         quizTitle:
-          type: string
+          type: ["string", "null"]
         startedAt:
           type: string
           format: date-time
@@ -1081,11 +1075,13 @@ components:
           type: ["string", "null"]
           format: date-time
         score:
-          type: ["integer", "null"]
+          type: ["number", "null"]
         totalQuestions:
           type: integer
         correctAnswers:
           type: ["integer", "null"]
+        tabSwitches:
+          type: integer
         status:
           type: string
           enum: [IN_PROGRESS, SUBMITTED, TIMED_OUT]
@@ -1095,6 +1091,7 @@ components:
         - quizId
         - startedAt
         - totalQuestions
+        - tabSwitches
         - status
 
     StartExamBody:
@@ -1233,7 +1230,7 @@ components:
         userName:
           type: string
         timestamp:
-          type: string
+          type: ["string", "null"]
           format: date-time
       required:
         - id
